Time: 43 ms (36.58%), Space: 67.4 MB (13.24%) - LeetHub