@@ -6,16 +6,16 @@ class Solution {
         return answer;
     }
     
-    private void backTrack(int n, int k, int curr, int count, List list) {
+    private void backTrack(int n, int k, int curr, int count, LinkedList list) {
         if(count == k) {
             answer.add(new ArrayList<>(list));
             return;
         }
         else {
             for(int i = curr; i <= n; i++) {
-                list.add(i);
+                list.addLast(i);
                 backTrack(n, k, i+1, count+1, list);
-                list.remove(list.size() - 1);
+                list.removeLast();
             }    
         }
     }
